add Berries (Ягоды) update id products add products in table

--- a/CW/app/src/main/res/layout/berries.xml
+++ b/CW/app/src/main/res/layout/berries.xml
@@ -11,14 +11,14 @@
         android:fillViewport="true"
         >
         <ToggleButton
-            android:id="@+id/se_28"
+            android:id="@+id/be_125"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_ananas"
             android:gravity="center_vertical"
-            android:textOn="Горчица"
-            android:textOff="Горчица"
+            android:textOn="Барбарис"
+            android:textOff="Барбарис"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -29,14 +29,14 @@
             android:layout_alignParentStart="true" />
 
         <ToggleButton
-            android:id="@+id/se_29"
+            android:id="@+id/be_126"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_orange"
             android:gravity="center_vertical"
-            android:textOn="Корица"
-            android:textOff="Корица"
+            android:textOn="Брюква"
+            android:textOff="Брюква"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -45,14 +45,14 @@
             android:layout_centerHorizontal="true" />
 
         <ToggleButton
-            android:id="@+id/se_30"
+            android:id="@+id/be_127"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_banana"
             android:gravity="center_vertical"
-            android:textOn="Паприка"
-            android:textOff="Паприка"
+            android:textOn="Вишня"
+            android:textOff="Вишня"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -62,97 +62,78 @@
             android:layout_alignParentEnd="true" />
 
         <ToggleButton
-            android:id="@+id/se_31"
+            android:id="@+id/be_128"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_grape"
             android:gravity="center_vertical"
-            android:textOn="Перец"
-            android:textOff="Перец"
+            android:textOn="Земляника"
+            android:textOff="Земляника"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-            android:layout_below="@+id/se_28"
+            android:layout_below="@+id/be_125"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginTop="35dp" />
 
         <ToggleButton
-            android:id="@+id/se_32"
+            android:id="@+id/be_129"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_dried_apricot"
             android:gravity="center_vertical"
-            android:textOn="Специи"
-            android:textOff="Специи"
+            android:textOn="Клубника"
+            android:textOff="Клубника"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-            android:layout_alignTop="@+id/se_31"
-            android:layout_alignLeft="@+id/se_29"
-            android:layout_alignStart="@+id/se_29" />
+            android:layout_alignTop="@+id/be_128"
+            android:layout_alignLeft="@+id/be_126"
+            android:layout_alignStart="@+id/be_126" />
 
         <ToggleButton
-            android:id="@+id/se_33"
+            android:id="@+id/be_130"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_lemon"
             android:gravity="center_vertical"
-            android:textOn="Тимьян"
-            android:textOff="Тимьян"
+            android:textOn="Клюква"
+            android:textOff="Клюква"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-            android:layout_alignTop="@+id/se_32"
-            android:layout_alignLeft="@+id/se_30"
-            android:layout_alignStart="@+id/se_30" />
+            android:layout_alignTop="@+id/be_129"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
         <ToggleButton
-            android:id="@+id/se_34"
+            android:id="@+id/be_131"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_tangerines"
             android:gravity="center_vertical"
-            android:textOn="Хрен"
-            android:textOff="Хрен"
+            android:textOn="Малина"
+            android:textOff="Малина"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-            android:layout_below="@+id/se_31"
+            android:layout_below="@+id/be_128"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginTop="35dp" />
-
-
-        <ToggleButton
-            android:id="@+id/se_35"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_tangerines"
-            android:gravity="center_vertical"
-            android:textOn="Шафран"
-            android:textOff="Шафран"
-            android:textSize="14dp"
-            android:textAlignment="center"
-            android:textColor="@color/color"
-            android:onClick="onToggleButtonClick"
-            android:checked="false"
-            android:layout_alignTop="@+id/se_34"
-            android:layout_alignLeft="@+id/se_32"
-            android:layout_alignStart="@+id/se_32" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
