--- a/CW/app/src/main/res/layout/main.xml
+++ b/CW/app/src/main/res/layout/main.xml
@@ -201,6 +201,23 @@
         android:layout_alignRight="@+id/refill"
         android:layout_alignEnd="@+id/refill" />
 
+    <ToggleButton
+        android:id="@+id/berries"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/button_background"
+        android:gravity="center_vertical"
+        android:textOn="Ягоды"
+        android:textOff="Ягоды"
+        android:textSize="15dp"
+        android:textAlignment="center"
+        android:textColor="@color/color"
+        android:onClick="onToggleButtonClick"
+        android:checked="false"
+        android:layout_above="@+id/next"
+        android:layout_alignLeft="@+id/seafood"
+        android:layout_alignStart="@+id/seafood" />
+
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
@@ -212,7 +229,6 @@
         android:layout_alignRight="@+id/cereals"
         android:layout_alignEnd="@+id/cereals"
         android:layout_marginTop="50dp" />
-
 
 </RelativeLayout>
     </ScrollView>
